rename entities & add features